--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -2,7 +2,7 @@
 network = flora.simulations.LoRaNetworkTest
 result-dir = results
 **.maxTransmissionDuration = 4s
-**.vector-recording = false
+**.vector-recording = true
 #rng-class = "cMersenneTwister"
 rng-class = "cLCG32"
 
@@ -20,63 +20,61 @@ rng-class = "cLCG32"
 **.numberOfPacketsToSend = 0
 
 simtime-resolution = -11
-#seed-0-lcg32 = ${1,2,3,4,5,6,7,8}
-#seed-0-lcg32 = ${5,6,7,8}
-seed-0-lcg32 = 1
+seed-0-lcg32 = 3
 
-#**.networkServer.app[0].adrMethod = ${ADR= "ADR-Lite"}
 
+#**.networkServer.app[0].adrMethod = ${"ADR-Lite", "LP-MAB"}
 **.networkServer.**.evaluateADRinServer = true
 **.loRaNodes[*].**.evaluateADRinNode = true
 
-**.numberOfNodes = ${Nodes=100..100 step 100}
+
+**.numberOfNodes = ${Nodes=100..700 step 100}
 **.loRaNodes[*].**myADR = ${ADR}
 **.loRaNodes[*].LoRaNic.mac.**myADR = ${ADR}
 
 
-
 ###**.sigma = ${sigma=0, 0.89, 1.78, 2.67, 3.56, 4.46, 5.35, 6.24, 7.08}
 **.sigma = ${sigma=7.08}
-#**.networkSizeX = ${nSize=9800}
-#**.networkSizeY = ${nSize}
+**.networkSizeX = ${nSize=9800}
+**.networkSizeY = ${nSize}
 **.LoRaMedium.pathLoss.typename = "LoRaPathLossOulu"
 
 ###**.sigma = ${sigma=0, 0.89, 1.78, 2.67, 3.56}
 #**.sigma = ${sigma=3.56}
 #**.networkSizeX = ${nSize=480}
-**.networkSizeY = ${nSize}
+#**.networkSizeY = ${nSize}
 #**.LoRaMedium.pathLoss.typename = "LoRaLogNormalShadowing"
 
-**.networkSizeX = ${nSize=500,1000,1500,2000,2500,3000}
+#**.networkSizeX = ${nSize=500,1000,1500,2000,2500,3000}
+#**.networkSizeY = ${nSize}
 
-#**.loRaNodes[*].**isMobile = false
-#**.loRaNodes[*].**speed = ${spd=uniform(0mps,0mps)}
-**.loRaNodes[*].**isMobile = true
+
+**.loRaNodes[*].**isMobile = false
+**.loRaNodes[*].**speed = ${spd=uniform(0mps,0mps)}
+#**.loRaNodes[*].**isMobile = true
 #**.loRaNodes[*].**speed = ${spd=uniform(0mps,5mps)}
-**.loRaNodes[*].**speed = ${spd=uniform(0mps,2mps), uniform(2mps,4mps), uniform(4mps,6mps), \
-uniform(6mps,8mps), uniform(8mps,10mps), uniform(10mps,12mps)}
+#**.loRaNodes[*].**speed = ${spd=uniform(0mps,2mps), uniform(2mps,4mps), uniform(4mps,6mps), \
+#uniform(6mps,8mps), uniform(8mps,10mps), uniform(10mps,12mps)}
 
 **.loRaNodes[*].**sending_interval = ${intv=1000s}
 #**.loRaNodes[*].**sending_interval = ${intv=450s, 900s, 1350s, 2700s, 5400s, 10800s, 21600s, 43200s, 86400s}
-**.timeToFirstPacket = exponential(1000s)
+**.timeToFirstPacket = exponential(${intv})
 **.timeToNextPacket = exponential(${intv})
-#**.timeToFirstPacket = 1000s
+#**.timeToFirstPacket = ${intv}
 #**.timeToNextPacket = ${intv}
 
 #####################################################
-sim-time-limit = ${days=12d}
-#sim-time-limit = ${days=12d,24d,36d,48d,60d,72d,84d,96d,108d,120d}
-
-**.loRaNodes[*].**.rpt_num = ${rpt=1}
-#**.loRaNodes[*].**.rpt_num = ${rpt=120}
+#sim-time-limit = ${days=12d}
 #[Config Urban]	
-#[Config Suburban]
-
+[Config Suburban]
+################################################
 **.loRaNodes[*].**.initialX =uniform(0m, ${nSize}m)
 **.loRaNodes[*].**.initialY = uniform(0m, ${nSize}m)
 
 
+
 **.loRaNodes[*].**initialLoRaSF = intuniform(7,12)
+#**.loRaNodes[*].**initialLoRaSF = 7
 **.loRaNodes[*].**initialLoRaTP = (2dBm) #+ 3dbm*intuniform(0,4))
 **.loRaNodes[*].**initialLoRaBW = 125 kHz
 **.loRaNodes[*].**initialLoRaCR = 4
